<resources>
    <string name="app_name">hansxhitori</string>
    <string name="PSZEMEK">pszemek</string>
    <string name="hitori">hitori</string>
    <string name="hans">hans</string>
    <string name="gusugs">gusgus</string>
    <string name="kakad">kakad</string>
    <string name="MIRON">miron</string>
    <string name="Login">login</string>
    <string name="Hasło">haslo</string>
</resources>
