<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pl.koisuru.hansxhitori.MainActivity">


    <TextView
        android:id="@+id/hans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pszemek"
        android:gravity="center"
        android:text="@string/hans"
        android:layout_weight="1"
        android:layout_margin="10dp"

        />

    <TextView
        android:id="@+id/hitor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gusgus"
        android:gravity="center"
        android:text="@string/hitori"
        android:layout_weight="1"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"

        />

    <TextView
        android:id="@+id/miron"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/miron"
        android:gravity="center"
        android:text="@string/kakad"
        android:layout_weight="1"
         android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/gusgus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/hitor"
        android:gravity="center"
        android:text="@string/gusugs"
        android:layout_weight="1"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/kakad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ande"
        android:gravity="center"
        android:text="@string/PSZEMEK"
        android:layout_weight="1"
        android:layout_margin="10dp"/>


</LinearLayout>
